--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
-  background-color: #0a0a0a;
+  background-color: #000;
   color: #00ff00;
   margin: 0;
   display: flex;
@@ -12,19 +12,24 @@ body {
 .container {
   background-color: #000;
   padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  text-align: center;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+  text-align: left;
   width: 80%;
   max-width: 400px;
+  border: 1px solid #00ff00;
+  overflow: auto;
+  line-height: 1.4;
+  font-size: 14px;
 }
 
 h1 {
   color: #00ff00;
   font-family: 'Courier New', Courier, monospace;
-  font-size: 2em;
-  text-shadow: 2px 2px 4px rgba(0, 255, 0, 0.2);
+  font-size: 24px;
   margin-bottom: 20px;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .passwordArea {
@@ -33,32 +38,25 @@ h1 {
   align-items: center;
 }
 
-.inputWithButton {
-  display: flex;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
 input[type="text"] {
-  flex: 1;
-  padding: 10px;
+  padding: 8px;
   margin-right: 10px;
-  border: 2px solid #00ff00;
-  border-radius: 5px;
-  font-size: 16px;
-  background-color: #001a00;
+  border: 1px solid #00ff00;
+  border-radius: 3px;
+  font-size: 14px;
+  background-color: #000;
   color: #00ff00;
 }
 
 button {
-  padding: 10px 20px;
+  padding: 8px 16px;
   background-color: #00ff00;
   color: black;
   border: none;
-  border-radius: 5px;
+  border-radius: 3px;
   cursor: pointer;
   transition: background-color 0.3s;
-  font-size: 16px;
+  font-size: 14px;
 }
 
 button:hover {
@@ -69,6 +67,7 @@ button:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 20px;
 }
 
 .strengthMeter {
@@ -76,7 +75,7 @@ button:hover {
   height: 10px;
   background-color: #000;
   border-radius: 5px;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
   overflow: hidden;
   position: relative;
 }
@@ -107,8 +106,4 @@ button:hover {
   font-weight: bold;
   color: #00ff00;
   font-size: 1.2em;
-}
-
-#copyButton {
-  margin-left: 10px;
 }
