--- a/style.css
+++ b/style.css
@@ -86,12 +86,13 @@ button:hover {
   width: 100%;
   height: 100%;
   border-radius: 5px;
-  background-image: linear-gradient(45deg, #00ff00, #006600);
+  background-image: linear-gradient(45deg, #00ff00, #6600cc); 
   position: absolute;
   top: 0;
   left: -100%;
   animation: progressAnimation 2s infinite linear;
 }
+
 
 @keyframes progressAnimation {
   0% {
